# rtld

./: meson.build
include/: sdk_init.hpp
source/: main.cpp
subprojects/librtld/: meson.build
subprojects/librtld/include/rtld/: ModuleObject.hpp  svc.hpp
subprojects/librtld/source/: relocation.cpp
